// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NotificationContext Should not crash 1`] = `
<Grommet
  full={true}
>
  <GlobalStyleComponent />
  <ContextConsumer>
    <Component />
  </ContextConsumer>
</Grommet>
`;

exports[`NotificationContext Should render a default popup 1`] = `
<Portal
  containerInfo={
    <div>
      <div
        aria-hidden="false"
      >
        <div
          class="StyledLayer-rmtehz-0 iOadC"
          tabindex="-1"
        >
          <div
            class="StyledLayer__StyledOverlay-rmtehz-1 kCkDcC"
          />
          <div
            class="StyledLayer__StyledContainer-rmtehz-2 eSmPYz"
          >
            <a
              aria-hidden="true"
              class="LayerContainer__HiddenAnchor-sc-1srj14c-0 LMZHJ"
              tabindex="-1"
            />
            <div
              class="StyledBox-sc-13pk1d4-0 fLFmbb"
            >
              <div
                class="StyledBox-sc-13pk1d4-0 iuDTIq"
              >
                <h3
                  class="StyledHeading-sc-1rdh4aw-0 ldQxwA"
                >
                  <div
                    class="Modal__Title-sc-14fi5dq-1 hTYitU"
                  >
                    Title
                  </div>
                </h3>
                <button
                  class="Modal__CloseButton-sc-14fi5dq-2 bdvYji StyledButton-sc-323bzc-0 kPUXNH"
                  type="button"
                >
                  <svg
                    aria-label="Close"
                    class="StyledIcon-ofa7kd-0 cgOtHq"
                    style="width: 16px; height: 16px; margin-right: -20px; margin-left: -20px;"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M3,3 L21,21 M3,21 L21,3"
                      fill="none"
                      stroke="#000"
                      stroke-width="2"
                    />
                  </svg>
                </button>
              </div>
              <div
                class="StyledBox-sc-13pk1d4-0 fWrrBh"
              >
                <p
                  class="StyledParagraph-tbetod-0 dIDtVY"
                >
                  Messsge
                </p>
              </div>
              <div
                class="StyledBox-sc-13pk1d4-0 kPYZDW"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  }
>
  <div
    aria-hidden={false}
  >
    <div
      className="StyledLayer-rmtehz-0 iOadC"
      onKeyDown={[Function]}
      tabIndex="-1"
    >
      <div
        className="StyledLayer__StyledOverlay-rmtehz-1 kCkDcC"
        onMouseDown={[Function]}
      />
      <div
        className="StyledLayer__StyledContainer-rmtehz-2 eSmPYz"
      >
        <a
          aria-hidden="true"
          className="LayerContainer__HiddenAnchor-sc-1srj14c-0 LMZHJ"
          tabIndex="-1"
        />
        <div
          className="StyledBox-sc-13pk1d4-0 fLFmbb"
        >
          <div
            className="StyledBox-sc-13pk1d4-0 iuDTIq"
          >
            <h3
              className="StyledHeading-sc-1rdh4aw-0 ldQxwA"
            >
              <div
                className="Modal__Title-sc-14fi5dq-1 hTYitU"
              >
                Title
              </div>
            </h3>
            <button
              className="Modal__CloseButton-sc-14fi5dq-2 bdvYji StyledButton-sc-323bzc-0 kPUXNH"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onMouseOut={[Function]}
              onMouseOver={[Function]}
              type="button"
            >
              <svg
                aria-label="Close"
                className="StyledIcon-ofa7kd-0 cgOtHq"
                style={
                  Object {
                    "height": "16px",
                    "marginLeft": "-20px",
                    "marginRight": "-20px",
                    "width": "16px",
                  }
                }
                viewBox="0 0 24 24"
              >
                <path
                  d="M3,3 L21,21 M3,21 L21,3"
                  fill="none"
                  stroke="#000"
                  strokeWidth="2"
                />
              </svg>
            </button>
          </div>
          <div
            className="StyledBox-sc-13pk1d4-0 fWrrBh"
          >
            <p
              className="StyledParagraph-tbetod-0 dIDtVY"
            >
              Messsge
            </p>
          </div>
          <div
            className="StyledBox-sc-13pk1d4-0 kPYZDW"
          />
        </div>
      </div>
    </div>
  </div>
</Portal>
`;

exports[`NotificationContext Should render a error popup 1`] = `
<Portal
  containerInfo={
    <div>
      <div
        aria-hidden="false"
      >
        <div
          class="StyledLayer-rmtehz-0 iOadC"
          tabindex="-1"
        >
          <div
            class="StyledLayer__StyledOverlay-rmtehz-1 kCkDcC"
          />
          <div
            class="StyledLayer__StyledContainer-rmtehz-2 eSmPYz"
          >
            <a
              aria-hidden="true"
              class="LayerContainer__HiddenAnchor-sc-1srj14c-0 LMZHJ"
              tabindex="-1"
            />
            <div
              class="StyledBox-sc-13pk1d4-0 fLFmbb"
            >
              <div
                class="StyledBox-sc-13pk1d4-0 iuDTIq"
              >
                <h3
                  class="StyledHeading-sc-1rdh4aw-0 dRDcVv"
                >
                  <div
                    class="Modal__Title-sc-14fi5dq-1 hTYitU"
                  >
                    Title
                  </div>
                </h3>
                <button
                  class="Modal__CloseButton-sc-14fi5dq-2 bdvYji StyledButton-sc-323bzc-0 kPUXNH"
                  type="button"
                >
                  <svg
                    aria-label="Close"
                    class="StyledIcon-ofa7kd-0 cgOtHq"
                    style="width: 16px; height: 16px; margin-right: -20px; margin-left: -20px;"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M3,3 L21,21 M3,21 L21,3"
                      fill="none"
                      stroke="#000"
                      stroke-width="2"
                    />
                  </svg>
                </button>
              </div>
              <div
                class="StyledBox-sc-13pk1d4-0 fWrrBh"
              >
                <p
                  class="StyledParagraph-tbetod-0 dIDtVY"
                >
                  Messsge
                </p>
              </div>
              <div
                class="StyledBox-sc-13pk1d4-0 kPYZDW"
              >
                <button
                  class="StyledButton-sc-323bzc-0 gvItKj"
                  type="button"
                >
                  OK
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  }
>
  <div
    aria-hidden={false}
  >
    <div
      className="StyledLayer-rmtehz-0 iOadC"
      onKeyDown={[Function]}
      tabIndex="-1"
    >
      <div
        className="StyledLayer__StyledOverlay-rmtehz-1 kCkDcC"
        onMouseDown={[Function]}
      />
      <div
        className="StyledLayer__StyledContainer-rmtehz-2 eSmPYz"
      >
        <a
          aria-hidden="true"
          className="LayerContainer__HiddenAnchor-sc-1srj14c-0 LMZHJ"
          tabIndex="-1"
        />
        <div
          className="StyledBox-sc-13pk1d4-0 fLFmbb"
        >
          <div
            className="StyledBox-sc-13pk1d4-0 iuDTIq"
          >
            <h3
              className="StyledHeading-sc-1rdh4aw-0 dRDcVv"
            >
              <div
                className="Modal__Title-sc-14fi5dq-1 hTYitU"
              >
                Title
              </div>
            </h3>
            <button
              className="Modal__CloseButton-sc-14fi5dq-2 bdvYji StyledButton-sc-323bzc-0 kPUXNH"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onMouseOut={[Function]}
              onMouseOver={[Function]}
              type="button"
            >
              <svg
                aria-label="Close"
                className="StyledIcon-ofa7kd-0 cgOtHq"
                style={
                  Object {
                    "height": "16px",
                    "marginLeft": "-20px",
                    "marginRight": "-20px",
                    "width": "16px",
                  }
                }
                viewBox="0 0 24 24"
              >
                <path
                  d="M3,3 L21,21 M3,21 L21,3"
                  fill="none"
                  stroke="#000"
                  strokeWidth="2"
                />
              </svg>
            </button>
          </div>
          <div
            className="StyledBox-sc-13pk1d4-0 fWrrBh"
          >
            <p
              className="StyledParagraph-tbetod-0 dIDtVY"
            >
              Messsge
            </p>
          </div>
          <div
            className="StyledBox-sc-13pk1d4-0 kPYZDW"
          >
            <button
              className="StyledButton-sc-323bzc-0 gvItKj"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onMouseOut={[Function]}
              onMouseOver={[Function]}
              type="button"
            >
              OK
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</Portal>
`;

exports[`NotificationContext Should render a success popup 1`] = `
<Portal
  containerInfo={
    <div>
      <div
        aria-hidden="false"
      >
        <div
          class="StyledLayer-rmtehz-0 iOadC"
          tabindex="-1"
        >
          <div
            class="StyledLayer__StyledOverlay-rmtehz-1 kCkDcC"
          />
          <div
            class="StyledLayer__StyledContainer-rmtehz-2 eSmPYz"
          >
            <a
              aria-hidden="true"
              class="LayerContainer__HiddenAnchor-sc-1srj14c-0 LMZHJ"
              tabindex="-1"
            />
            <div
              class="StyledBox-sc-13pk1d4-0 fLFmbb"
            >
              <div
                class="StyledBox-sc-13pk1d4-0 iuDTIq"
              >
                <h3
                  class="StyledHeading-sc-1rdh4aw-0 jSgPI"
                >
                  <div
                    class="Modal__Title-sc-14fi5dq-1 hTYitU"
                  >
                    Title
                  </div>
                </h3>
                <button
                  class="Modal__CloseButton-sc-14fi5dq-2 bdvYji StyledButton-sc-323bzc-0 kPUXNH"
                  type="button"
                >
                  <svg
                    aria-label="Close"
                    class="StyledIcon-ofa7kd-0 cgOtHq"
                    style="width: 16px; height: 16px; margin-right: -20px; margin-left: -20px;"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M3,3 L21,21 M3,21 L21,3"
                      fill="none"
                      stroke="#000"
                      stroke-width="2"
                    />
                  </svg>
                </button>
              </div>
              <div
                class="StyledBox-sc-13pk1d4-0 fWrrBh"
              >
                <p
                  class="StyledParagraph-tbetod-0 dIDtVY"
                >
                  Messsge
                </p>
              </div>
              <div
                class="StyledBox-sc-13pk1d4-0 kPYZDW"
              >
                <button
                  class="StyledButton-sc-323bzc-0 gvItKj"
                  type="button"
                >
                  OK
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  }
>
  <div
    aria-hidden={false}
  >
    <div
      className="StyledLayer-rmtehz-0 iOadC"
      onKeyDown={[Function]}
      tabIndex="-1"
    >
      <div
        className="StyledLayer__StyledOverlay-rmtehz-1 kCkDcC"
        onMouseDown={[Function]}
      />
      <div
        className="StyledLayer__StyledContainer-rmtehz-2 eSmPYz"
      >
        <a
          aria-hidden="true"
          className="LayerContainer__HiddenAnchor-sc-1srj14c-0 LMZHJ"
          tabIndex="-1"
        />
        <div
          className="StyledBox-sc-13pk1d4-0 fLFmbb"
        >
          <div
            className="StyledBox-sc-13pk1d4-0 iuDTIq"
          >
            <h3
              className="StyledHeading-sc-1rdh4aw-0 jSgPI"
            >
              <div
                className="Modal__Title-sc-14fi5dq-1 hTYitU"
              >
                Title
              </div>
            </h3>
            <button
              className="Modal__CloseButton-sc-14fi5dq-2 bdvYji StyledButton-sc-323bzc-0 kPUXNH"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onMouseOut={[Function]}
              onMouseOver={[Function]}
              type="button"
            >
              <svg
                aria-label="Close"
                className="StyledIcon-ofa7kd-0 cgOtHq"
                style={
                  Object {
                    "height": "16px",
                    "marginLeft": "-20px",
                    "marginRight": "-20px",
                    "width": "16px",
                  }
                }
                viewBox="0 0 24 24"
              >
                <path
                  d="M3,3 L21,21 M3,21 L21,3"
                  fill="none"
                  stroke="#000"
                  strokeWidth="2"
                />
              </svg>
            </button>
          </div>
          <div
            className="StyledBox-sc-13pk1d4-0 fWrrBh"
          >
            <p
              className="StyledParagraph-tbetod-0 dIDtVY"
            >
              Messsge
            </p>
          </div>
          <div
            className="StyledBox-sc-13pk1d4-0 kPYZDW"
          >
            <button
              className="StyledButton-sc-323bzc-0 gvItKj"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onMouseOut={[Function]}
              onMouseOver={[Function]}
              type="button"
            >
              OK
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</Portal>
`;

exports[`NotificationContext Should render a warning popup 1`] = `
<Portal
  containerInfo={
    <div>
      <div
        aria-hidden="false"
      >
        <div
          class="StyledLayer-rmtehz-0 iOadC"
          tabindex="-1"
        >
          <div
            class="StyledLayer__StyledOverlay-rmtehz-1 kCkDcC"
          />
          <div
            class="StyledLayer__StyledContainer-rmtehz-2 eSmPYz"
          >
            <a
              aria-hidden="true"
              class="LayerContainer__HiddenAnchor-sc-1srj14c-0 LMZHJ"
              tabindex="-1"
            />
            <div
              class="StyledBox-sc-13pk1d4-0 fLFmbb"
            >
              <div
                class="StyledBox-sc-13pk1d4-0 iuDTIq"
              >
                <h3
                  class="StyledHeading-sc-1rdh4aw-0 fqnDwr"
                >
                  <div
                    class="Modal__Title-sc-14fi5dq-1 hTYitU"
                  >
                    Title
                  </div>
                </h3>
                <button
                  class="Modal__CloseButton-sc-14fi5dq-2 bdvYji StyledButton-sc-323bzc-0 kPUXNH"
                  type="button"
                >
                  <svg
                    aria-label="Close"
                    class="StyledIcon-ofa7kd-0 cgOtHq"
                    style="width: 16px; height: 16px; margin-right: -20px; margin-left: -20px;"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M3,3 L21,21 M3,21 L21,3"
                      fill="none"
                      stroke="#000"
                      stroke-width="2"
                    />
                  </svg>
                </button>
              </div>
              <div
                class="StyledBox-sc-13pk1d4-0 fWrrBh"
              >
                <p
                  class="StyledParagraph-tbetod-0 dIDtVY"
                >
                  Messsge
                </p>
              </div>
              <div
                class="StyledBox-sc-13pk1d4-0 kPYZDW"
              >
                <button
                  class="StyledButton-sc-323bzc-0 gvItKj"
                  type="button"
                >
                  OK
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  }
>
  <div
    aria-hidden={false}
  >
    <div
      className="StyledLayer-rmtehz-0 iOadC"
      onKeyDown={[Function]}
      tabIndex="-1"
    >
      <div
        className="StyledLayer__StyledOverlay-rmtehz-1 kCkDcC"
        onMouseDown={[Function]}
      />
      <div
        className="StyledLayer__StyledContainer-rmtehz-2 eSmPYz"
      >
        <a
          aria-hidden="true"
          className="LayerContainer__HiddenAnchor-sc-1srj14c-0 LMZHJ"
          tabIndex="-1"
        />
        <div
          className="StyledBox-sc-13pk1d4-0 fLFmbb"
        >
          <div
            className="StyledBox-sc-13pk1d4-0 iuDTIq"
          >
            <h3
              className="StyledHeading-sc-1rdh4aw-0 fqnDwr"
            >
              <div
                className="Modal__Title-sc-14fi5dq-1 hTYitU"
              >
                Title
              </div>
            </h3>
            <button
              className="Modal__CloseButton-sc-14fi5dq-2 bdvYji StyledButton-sc-323bzc-0 kPUXNH"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onMouseOut={[Function]}
              onMouseOver={[Function]}
              type="button"
            >
              <svg
                aria-label="Close"
                className="StyledIcon-ofa7kd-0 cgOtHq"
                style={
                  Object {
                    "height": "16px",
                    "marginLeft": "-20px",
                    "marginRight": "-20px",
                    "width": "16px",
                  }
                }
                viewBox="0 0 24 24"
              >
                <path
                  d="M3,3 L21,21 M3,21 L21,3"
                  fill="none"
                  stroke="#000"
                  strokeWidth="2"
                />
              </svg>
            </button>
          </div>
          <div
            className="StyledBox-sc-13pk1d4-0 fWrrBh"
          >
            <p
              className="StyledParagraph-tbetod-0 dIDtVY"
            >
              Messsge
            </p>
          </div>
          <div
            className="StyledBox-sc-13pk1d4-0 kPYZDW"
          >
            <button
              className="StyledButton-sc-323bzc-0 gvItKj"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onMouseOut={[Function]}
              onMouseOver={[Function]}
              type="button"
            >
              OK
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</Portal>
`;

exports[`NotificationContext Should set the proper label for the confirm button 1`] = `
<Portal
  containerInfo={
    <div>
      <div
        aria-hidden="false"
      >
        <div
          class="StyledLayer-rmtehz-0 iOadC"
          tabindex="-1"
        >
          <div
            class="StyledLayer__StyledOverlay-rmtehz-1 kCkDcC"
          />
          <div
            class="StyledLayer__StyledContainer-rmtehz-2 eSmPYz"
          >
            <a
              aria-hidden="true"
              class="LayerContainer__HiddenAnchor-sc-1srj14c-0 LMZHJ"
              tabindex="-1"
            />
            <div
              class="StyledBox-sc-13pk1d4-0 fLFmbb"
            >
              <div
                class="StyledBox-sc-13pk1d4-0 iuDTIq"
              >
                <h3
                  class="StyledHeading-sc-1rdh4aw-0 ldQxwA"
                >
                  <div
                    class="Modal__Title-sc-14fi5dq-1 hTYitU"
                  >
                    Title
                  </div>
                </h3>
                <button
                  class="Modal__CloseButton-sc-14fi5dq-2 bdvYji StyledButton-sc-323bzc-0 kPUXNH"
                  type="button"
                >
                  <svg
                    aria-label="Close"
                    class="StyledIcon-ofa7kd-0 cgOtHq"
                    style="width: 16px; height: 16px; margin-right: -20px; margin-left: -20px;"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M3,3 L21,21 M3,21 L21,3"
                      fill="none"
                      stroke="#000"
                      stroke-width="2"
                    />
                  </svg>
                </button>
              </div>
              <div
                class="StyledBox-sc-13pk1d4-0 fWrrBh"
              >
                <p
                  class="StyledParagraph-tbetod-0 dIDtVY"
                >
                  Messsge
                </p>
              </div>
              <div
                class="StyledBox-sc-13pk1d4-0 kPYZDW"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  }
>
  <div
    aria-hidden={false}
  >
    <div
      className="StyledLayer-rmtehz-0 iOadC"
      onKeyDown={[Function]}
      tabIndex="-1"
    >
      <div
        className="StyledLayer__StyledOverlay-rmtehz-1 kCkDcC"
        onMouseDown={[Function]}
      />
      <div
        className="StyledLayer__StyledContainer-rmtehz-2 eSmPYz"
      >
        <a
          aria-hidden="true"
          className="LayerContainer__HiddenAnchor-sc-1srj14c-0 LMZHJ"
          tabIndex="-1"
        />
        <div
          className="StyledBox-sc-13pk1d4-0 fLFmbb"
        >
          <div
            className="StyledBox-sc-13pk1d4-0 iuDTIq"
          >
            <h3
              className="StyledHeading-sc-1rdh4aw-0 ldQxwA"
            >
              <div
                className="Modal__Title-sc-14fi5dq-1 hTYitU"
              >
                Title
              </div>
            </h3>
            <button
              className="Modal__CloseButton-sc-14fi5dq-2 bdvYji StyledButton-sc-323bzc-0 kPUXNH"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onMouseOut={[Function]}
              onMouseOver={[Function]}
              type="button"
            >
              <svg
                aria-label="Close"
                className="StyledIcon-ofa7kd-0 cgOtHq"
                style={
                  Object {
                    "height": "16px",
                    "marginLeft": "-20px",
                    "marginRight": "-20px",
                    "width": "16px",
                  }
                }
                viewBox="0 0 24 24"
              >
                <path
                  d="M3,3 L21,21 M3,21 L21,3"
                  fill="none"
                  stroke="#000"
                  strokeWidth="2"
                />
              </svg>
            </button>
          </div>
          <div
            className="StyledBox-sc-13pk1d4-0 fWrrBh"
          >
            <p
              className="StyledParagraph-tbetod-0 dIDtVY"
            >
              Messsge
            </p>
          </div>
          <div
            className="StyledBox-sc-13pk1d4-0 kPYZDW"
          />
        </div>
      </div>
    </div>
  </div>
</Portal>
`;
